syntax = "proto3";
option csharp_namespace = "ThreeL.SocketServer.Application.Contract";

import "google/protobuf/timestamp.proto";

//https://learn.microsoft.com/zh-cn/dotnet/architecture/grpc-for-wcf-developers/protobuf-data-types

message ChatRecordPostRequest{
	string messageId = 1;
	string message = 2;
	int32 messageRecordType = 3;
	int32 ImageType = 4;
	google.protobuf.Timestamp sendTime = 5;
	int64 from = 6;
	string fromName = 7;
	int64 to = 8;
	int64 fileId = 9;
	bool isGroup = 10;
}

message ChatRecordPostResponse{
	bool result = 1;
}

message ChatRecordWithdrawRequest{
	string messageId = 1;
}

message ChatRecordWithdrawResponse{
	bool result = 1;
}

message VoiceChatRecordPostRequest{
	google.protobuf.Timestamp sendTime = 1;
	int64 to = 2;
	string fromPlatform = 3;
}

message VoiceChatRecordPostResponse{
	bool result = 1;
	string chatKey = 2;
}

message VoiceChatRecorStatusRequest{
	string chatKey = 1;
}

message VoiceChatRecorStatusResponse{
	bool started = 1;
}

message VoiceChatRecorStatusUpdateRequest{
	string chatKey = 1;
	int32 status = 2;
	string fromName = 3;
}

message VoiceChatRecordFinishRequest{
	string chatKey = 1;
	int32 status = 2;
}

message VoiceChatRecorStatusUpdateResponse{
	bool result = 1;
	int32 status = 2;
}