syntax = "proto3";

option csharp_namespace = "ThreeL.SocketServer.Application.Contract";
import "Protos/File.proto";

message SocketServerUserLoginRequest{
}

message SocketServerUserLoginResponse{
	bool result = 1;
}

service SocketServerService{
	rpc SocketServerUserLogin(SocketServerUserLoginRequest) returns (SocketServerUserLoginResponse);
	rpc FetchFileInfo(FileInfoRequest) returns (FileInfoResponse);
}